--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Matrix
-Version: 0.3-5
-Date: 2000/08/11
-Title: A Matrix library for R
+Version: 0.3-6
+Date: 2000/10/30
+Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 	Saikat DebRoy <saikat@stat.wisc.edu>
-Description: A Matrix library for R
-Depends: R (>= 1.1.0)
+Description: A Matrix package for R
+Depends: R (>= 1.1.1)
 License: GPL version 2 or later
