--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: Matrix
-Version: 0.8-9
-Date: 2004/06/12
+Version: 0.8-10
+Date: $Date: 2004-07-07 13:23:11 -0500 (Wed, 07 Jul 2004) $
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Classes and methods for numerical linear algebra
     using Lapack, LDL, TAUCS, Metis, and UMFPACK
 Depends: R (>= 1.9.0), methods
+Suggests: lattice
 License: GPL version 2 or later
  This R package includes code from the LDL, TAUCS, and Metis packages
  which are covered by separate copyrights.  See the file Copyrights for
  details.
-Packaged: Tue Jul  6 15:30:04 2004; bates
+Packaged: Wed Jul  7 14:22:56 2004; bates
