--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,19 @@
 Package: Matrix
-Version: 0.8-12
-Date: 2004-08-31
+Version: 0.8-13
+Date: 2004-09-13
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Classes and methods for numerical linear algebra
     using Lapack, LDL, and Metis.
-Depends: R (>= 1.9.0), methods, graphics, stats
+Depends: R (>= 1.9.1), methods, graphics, stats
 Imports: graphics, stats
 Suggests: lattice
+SaveImage: no
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later.
  This R package includes code from the LDL and Metis packages,
  which are covered by separate copyrights.  See the file Copyrights for
  details.
-Packaged: Tue Aug 31 14:29:41 2004; bates
+Packaged: Mon Sep 13 09:24:11 2004; bates
