--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: Matrix
-Version: 0.8-14
-Date: 2004-09-14
+Version: 0.8-15
+Date: 2004-10-02
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Classes and methods for numerical linear algebra
     using Lapack, LDL, and Metis.
-Depends: R (>= 1.9.1), methods, graphics, stats
-Imports: graphics, stats
+Depends: R (>= 2.0.0), methods
+Imports: graphics, stats, lattice, grid
 Suggests: lattice
 SaveImage: no
 LazyLoad: yes
@@ -16,4 +16,4 @@ License: GPL version 2 or later.
  This R package includes code from the LDL and Metis packages,
  which are covered by separate copyrights.  See the file Copyrights for
  details.
-Packaged: Tue Sep 14 09:05:14 2004; bates
+Packaged: Sat Oct  2 20:20:14 2004; bates
