--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.8-19
-Date: 2004-12-13
+Version: 0.8-21
+Date: 2004-12-16
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -15,4 +15,4 @@ License: GPL version 2 or later.
  This R package includes code from the LDL and Metis packages,
  which are covered by separate copyrights.  See the file Copyrights for
  details.
-Packaged: Mon Dec 13 19:10:08 2004; bates
+Packaged: Mon Dec 27 13:47:21 2004; hornik
