--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,7 @@ exportClasses(
               "cscBlocked",
               "cscMatrix",
               "geMatrix",
-              "lmeRep",
+              "lmer",
               "pdfactor",
               "pdmatrix",
               "poMatrix",
