--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.8-21
-Date: 2004-12-16
+Version: 0.8-22
+Date: 2005-01-03
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -15,4 +15,4 @@ License: GPL version 2 or later.
  This R package includes code from the LDL and Metis packages,
  which are covered by separate copyrights.  See the file Copyrights for
  details.
-Packaged: Mon Dec 27 13:47:21 2004; hornik
+Packaged: Fri Jan 21 19:22:11 2005; bates
