--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: Matrix
-Version: 0.95-5
-Date: 2005-03-31
+Version: 0.95-6
+Date: 2005-04-18
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Classes and methods for numerical linear algebra
     using Lapack, LDL, and Metis.
-Depends: R (>= 2.0.0), methods
-Imports: graphics, stats, lattice, grid
+Depends: R (>= 2.1.0), methods
+Imports: graphics, lattice, grid
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later.
  This R package includes code from the LDL and Metis packages,
  which are covered by separate copyrights.  See the file Copyrights for
  details.
-Packaged: Thu Mar 31 14:52:55 2005; bates
+Packaged: Mon Apr 18 16:55:14 2005; bates
