--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@ pkg = Matrix
 PKG_CFLAGS = -I./Metis
 PKG_LIBS = ${LAPACK_LIBS} ${BLAS_LIBS}
 include SOURCES_C.mkf
-OBJECTS = $(SOURCES_C:.c=.o)
+SOURCES.F = ghq.f
+OBJECTS = $(SOURCES_C:.c=.o) $(SOURCES.F:.f=.o)
 SHLIB = $(pkg)$(SHLIB_EXT)
 SUBDIRS = Metis
 SUBLIBS = $(SUBDIRS:=.a)
