--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,24 +45,32 @@ exportClasses(
 	      ## also intermediate `virtual' ones:
 	      "dMatrix",
               "lMatrix",
+	      "denseMatrix",
 	      "sparseMatrix",
 	      "dsparseMatrix",
               "lsparseMatrix",
-	      ## not yet:   "iMatrix", "zMatrix",
 
 	      "ddenseMatrix",
+	      ## not yet used, but as sub-classes;
+              ## need to provide them for 'hierarchy-analysis':
+              "iMatrix",
+              "zMatrix",
+              "ldenseMatrix",
 
 	      "dgBCMatrix",
 	      "dgCMatrix",
+	      "dgRMatrix",# unused
 	      "dgTMatrix",
 	      "dgeMatrix",
 	      "dpoMatrix",
 	      "dppMatrix",
 	      "dsCMatrix",
+	      "dsRMatrix",# unused
 	      "dsTMatrix",
 	      "dspMatrix",
 	      "dsyMatrix",
 	      "dtCMatrix",
+	      "dtRMatrix",# unused
 	      "dtTMatrix",
 	      "dtpMatrix",
 	      "dtrMatrix",
