--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.99-2
-Date: 2005-11-14
+Version: 0.99-3
+Date: 2005-12-12
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -18,4 +18,4 @@ License: GPL version 2 or later.
  includes code from the University of Florida sparse matrix library maintained by
  Tim Davis.  All sections of that code are covered by the GPL or LGPL licenses.  See the
  directory UFsparse for details.
-Packaged: Mon Nov 14 16:06:56 2005; bates
+Packaged: Mon Dec 12 15:05:15 2005; maechler
