--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: Matrix
-Version: 0.99-3
-Date: 2005-12-12
+Version: 0.99-4
+Date: 2006-01-03
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Classes and methods for numerical linear algebra
     using Lapack, LDL, and Metis.
-Depends: R (>= 2.2.0), methods
+Depends: R (>= 2.2.0), methods, utils
 Imports: graphics, lattice, grid, stats
 Suggests: mlmRev, MASS, coda
 SystemRequirements: GNU make
@@ -18,4 +18,4 @@ License: GPL version 2 or later.
  includes code from the University of Florida sparse matrix library maintained by
  Tim Davis.  All sections of that code are covered by the GPL or LGPL licenses.  See the
  directory UFsparse for details.
-Packaged: Mon Dec 12 15:05:15 2005; maechler
+Packaged: Tue Jan  3 17:48:52 2006; maechler
