--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.99-6
-Date: 2006-01-08
+Version: 0.995-1
+Date: 2006-01-15
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -18,4 +18,4 @@ License: GPL version 2 or later.
  includes code from the University of Florida sparse matrix library maintained by
  Tim Davis.  All sections of that code are covered by the GPL or LGPL licenses.  See the
  directory UFsparse for details.
-Packaged: Sun Jan  8 15:52:07 2006; bates
+Packaged: Mon Jan 16 21:13:10 2006; maechler
