--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
+## Needs R-2.3.0 or later
+#useDynLib(Matrix, .registration=TRUE)
 useDynLib(Matrix)
 
 importFrom("graphics",image)
@@ -14,11 +16,12 @@ export("Diagonal",
        "Hilbert",
        "Matrix",
        "Schur",
-       "bCrosstab",
        "expand",
        "expm",
        "facmul",
-       #not yet on purpose: "isSymmetric",
+#        "isTriangular",
+#        "isDiagonal",
+#        "isSymmetric" is in R 2.3.0
        "lu",
        "norm",
        "rcond",
@@ -64,15 +67,21 @@ exportClasses(
 	      "Cholesky",
 	      "pCholesky",
 	      "LU",
+
 	      "Matrix",
 	      ## also intermediate `virtual' ones:
 	      "dMatrix",
 	      "lMatrix",
 	      "denseMatrix",
 	      "sparseMatrix",
+
+              "diagonalMatrix",
+              "generalMatrix",
               "symmetricMatrix",
               "triangularMatrix",
-              "diagonalMatrix",
+
+              "compMatrix",
+
 	      "dsparseMatrix",
 	      "lsparseMatrix",
 	      "TsparseMatrix",
@@ -84,7 +93,6 @@ exportClasses(
 	      "zMatrix",
 	      "ldenseMatrix",
 
-	      "dgBCMatrix",
 	      "dgCMatrix",
 	      "dgRMatrix",# unused
 	      "dgTMatrix",
@@ -102,7 +110,6 @@ exportClasses(
 	      "dtpMatrix",
 	      "dtrMatrix",
               "ddiMatrix",
-
 	      "lgeMatrix",
 	      "lspMatrix",
 	      "lsyMatrix",
@@ -119,16 +126,17 @@ exportClasses(
 	      "ltCMatrix",
 	      "ltRMatrix",# unused
 	      "ltTMatrix",
+              "pMatrix",
 
-	      "corrmatrix",
-	      "pMatrix",
-	      "pdmatrix",
 	      "dCholCMatrix",
-	      "lCholCMatrix"
+	      "lCholCMatrix",
+              "dCHMsuper",
+              "dCHMsimpl",
+              "correlation" # unused
 	      )
 
 ## lmer-related
-exportClasses("VarCorr", "lmer", "mer", "summary.lmer")
+exportClasses("lmer", "lmer.ranef", "mer")
 
 
 exportMethods(
@@ -161,6 +169,9 @@ exportMethods(
 	      "expm",
 	      "kronecker",
 	      "image",
+## 	       "isDiagonal",
+## 	       "isSymmetric",
+## 	       "isTriangular",
 	      "norm",
 	      "rcond",
 	      "rowMeans",
@@ -183,6 +194,7 @@ exportMethods("cbind2")
 ## lmer-related
 exportMethods("BIC", "anova", "coef", "confint", "deviance", "fitted",
 	      "fixef", "formula", "lmer", "logLik", "mcmcsamp",
-	      "plot", "ranef", "residuals", "resid", "simulate",
+	      # "plot",
+              "ranef", "residuals", "resid", "simulate",
 	      "summary", "update", "vcov", "VarCorr", "with")
 
