--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.995-12
-Date: 2006-07-17
+Version: 0.995-13
+Date: 2006-08-03
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -11,11 +11,13 @@ Imports: graphics, lattice, grid, stats
 Suggests: mlmRev, MASS, coda
 SystemRequirements: GNU make
 LazyLoad: yes
-LazyData: yes
+LazyData: no
+LazyDataNote: no longer available, since we use data/*.R
 License: GPL version 2 or later.
- This R package includes code from the Metis package and from NIST.  This code is
- covered by separate copyrights; see the file Copyrights for details.  This R package
- includes code from the University of Florida sparse matrix library maintained by
- Tim Davis.  All sections of that code are covered by the GPL or LGPL licenses.  See the
- directory UFsparse for details.
-Packaged: Mon Jul 17 22:19:42 2006; maechler
+ This R package includes code from the Metis package and from NIST.
+ This code is covered by separate copyrights; see the file Copyrights
+ for details.  This R package includes code from the University of
+ Florida sparse matrix library maintained by Tim Davis.  All sections
+ of that code are covered by the GPL or LGPL licenses.  See the
+ directory doc/UFsparse for details.
+Packaged: Thu Aug  3 19:26:08 2006; maechler
