--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.995-18
-Date: 2006-09-13
+Version: 0.995-19
+Date: 2006-09-15
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -21,4 +21,4 @@ License: GPL version 2 or later.
  Florida sparse matrix library maintained by Tim Davis.  All sections
  of that code are covered by the GPL or LGPL licenses.  See the
  directory doc/UFsparse for details.
-Packaged: Wed Sep 13 14:30:30 2006; bates
+Packaged: Fri Sep 15 17:54:28 2006; maechler
