--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.9975-2
-Date: 2006-10-04
+Version: 0.9975-3
+Date: 2006-10-06
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -18,4 +18,4 @@ License: GPL version 2 or later.
  from the University of Florida sparse matrix library maintained by Tim
  Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
-Packaged: Wed Oct  4 17:09:38 2006; bates
+Packaged: Sun Oct  8 20:46:21 2006; hornik
