--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: Matrix
-Version: 0.9975-11
-Date: 2007-02-16
+Version: 0.99875-0
+Date: 2007-05-11
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: <Matrix-authors@R-project.org>
 Description: Classes and methods for dense and sparse matrices and
     operations on them using Lapack, CSparse and CHOLMOD
-Depends: R (>= 2.4.1), stats, methods, utils, lattice
+Depends: R (>= 2.5.0), stats, methods, utils, lattice
 Imports: graphics, lattice, grid, stats
 Enhances: graph, SparseM
 SystemRequirements: GNU make
@@ -18,4 +18,4 @@ License: GPL version 2 or later.
  from the University of Florida sparse matrix library maintained by Tim
  Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
-Packaged: Fri Feb 16 21:43:21 2007; bates
+Packaged: Sat May 12 00:18:30 2007; maechler
