--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-3
-Date: 2007-10-06
+Version: 0.999375-4
+Date: 2008-01-12
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
@@ -13,9 +13,9 @@ SystemRequirements: GNU make
 LazyLoad: yes
 LazyData: no
 LazyDataNote: no longer available, since we use data/*.R *and* our classes
-License: GPL version 2 or later.
+License: GPL (>= 2)
  This R package includes libraries CHOLMOD, AMD, COLAMD and CSparse
  from the University of Florida sparse matrix library maintained by Tim
  Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
-Packaged: Sun Oct  7 00:31:57 2007; maechler
+Packaged: Sat Jan 12 19:55:04 2008; maechler
