--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-6
-Date: 2008-03-14
+Version: 0.999375-7
+Date: 2008-03-22
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
@@ -18,4 +18,4 @@ LicenseDetails: The Matrix package includes libraries CHOLMOD, AMD, COLAMD and C
  from the University of Florida sparse matrix library maintained by Tim
  Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
-Packaged: Fri Mar 14 20:29:24 2008; maechler
+Packaged: Sun Mar 23 11:41:25 2008; bates
