--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-13
-Date: 2008-08-30
+Version: 0.999375-14
+Date: 2008-09-08
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
@@ -18,4 +18,4 @@ LicenseDetails: The Matrix package includes libraries CHOLMOD, AMD, COLAMD and C
  from the University of Florida sparse matrix library maintained by Tim
  Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
-Packaged: Sat Aug 30 09:23:13 2008; maechler
+Packaged: Tue Sep  9 04:38:59 2008; theussl
