--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-16
-Date: 2008-10-17
+Version: 0.999375-17
+Date: 2008-12-10
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
@@ -18,4 +18,4 @@ LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
  COLAMD, CSparse and SPQR from the SuiteSparse collection of Tim
  Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
-Packaged: Fri Oct 17 15:49:16 2008; maechler
+Packaged: Wed Dec 10 12:47:44 2008; bates
