--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-17
-Date: 2008-12-10
+Version: 0.999375-18
+Date: 2009-01-20
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
@@ -18,4 +18,4 @@ LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
  COLAMD, CSparse and SPQR from the SuiteSparse collection of Tim
  Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
-Packaged: Wed Dec 10 12:47:44 2008; bates
+Packaged: Tue Jan 20 09:48:34 2009; maechler
