--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,7 +204,7 @@ exportClasses(
 	      "nCHMsimpl",# unused
 
 	      "sparseQR",
-	      "SPQR",
+## 	      "SPQR",
 
 	      "Schur",
 
@@ -287,7 +287,7 @@ exportMethods(## for both own and "other" generics:
 	      "rowSums",
 	      "show",
 	      "solve",
-              "spqr",
+##               "spqr",
 	      "summary",
               "symmpart",
               "skewpart",
