--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-22
-Date: 2009-03-12
+Version: 0.999375-23
+Date: 2009-03-30
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
         <maechler@stat.math.ethz.ch>
@@ -20,6 +20,6 @@ LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
         COLAMD, CSparse and SPQR from the SuiteSparse collection of Tim
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
-Packaged: Thu Mar 12 11:47:53 2009; maechler
+Packaged: 2009-03-30 15:34:36 UTC; maechler
 Repository: CRAN
-Date/Publication: 2009-03-13 09:07:54
+Date/Publication: 2009-03-31 17:35:58
