--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,17 +13,19 @@ importFrom("methods", Ops, Arith, Compare, Logic, Math, Math2, Summary, Complex)
 
 ## Generics and functions defined in this package
 export("Cholesky",
-       "Diagonal", ".symDiagonal",
+       "Diagonal", ".symDiagonal", ".sparseDiagonal",
        "Hilbert",
        "Matrix",
        "spMatrix",
        "sparseMatrix",
        "Schur",
+       "abIseq", "abIseq1",
        "band",
        "bandSparse",
        "bdiag",
-       "colMeans", "colSums", ## these needed a "..." added
-       "rowMeans", "rowSums",
+## no longer; implicit generics now
+       ## "colMeans", "colSums", ## these needed a "..." added
+       ## "rowMeans", "rowSums",
 ##NOT_YET "det", # = a copy of base::det() but with Matrix namespace
        "drop0",
        "expand",
@@ -34,7 +36,6 @@ export("Cholesky",
 #	 "isDiagonal",
        "isLDL",
        "lu",
-       "norm",
        "nearPD",
        "nnzero",
        "printSpMatrix",
@@ -216,6 +217,7 @@ exportMethods(## for both own and "other" generics:
 	      "as.matrix",
 	      "as.vector",
 	      "as.numeric",
+	      "as.integer",
 	      "as.logical",
 	      "band",
 	      "chol",
@@ -246,6 +248,7 @@ exportMethods(## for both own and "other" generics:
 	      "length",
               "mean",
 	      "norm",
+              "nnzero",
               "print",# print(x, ...) when show(x) is not sufficient
 	      "qr",
 	      "qr.R",
@@ -280,8 +283,12 @@ if(getRversion() < "2.10.0")# The version of R -- at *install* time (!)
 if(getRversion() < "2.10.0")
     export("xtabs")
 
+if(getRversion() < "2.11.0" || R.version$`svn rev` < 51000)
+    ##                                               ----- FIXME exact number
+    export("norm")
 
 exportMethods("rbind2")
 exportMethods("cbind2")
 
 S3method(print, sparseSummary)
+S3method(c, abIndex)# < for now -- S4 method on c() seems "difficult"
