--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-38
-Date: 2010-03-31
+Version: 0.999375-39
+Date: 2010-05-18
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -11,17 +11,17 @@ Description: Classes and methods for dense and sparse matrices and
 Depends: R (>= 2.9.1), stats, methods, utils, lattice
 Imports: graphics, lattice, grid, stats
 Enhances: graph, SparseM
-SystemRequirements: GNU make
 LazyLoad: yes
 LazyData: no
 LazyDataNote: no longer available, since we use data/*.R *and* our
         classes
+Encoding: UTF-8
 License: GPL (>= 2)
 LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
         COLAMD, CSparse and SPQR from the SuiteSparse collection of Tim
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2010-03-31 14:43:28 UTC; maechler
+Packaged: 2010-05-18 09:10:57 UTC; maechler
 Repository: CRAN
-Date/Publication: 2010-04-02 17:05:28
+Date/Publication: 2010-05-19 08:12:01
