--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ useDynLib(Matrix, .registration=TRUE)
 importFrom("lattice", levelplot)
 importFrom("graphics", image)
 importFrom("utils", head, tail)
-importFrom("stats", cov2cor, update)
+importFrom("stats", cov2cor, update#, vcov
+           )
+
 importFrom("grid", grid.rect, gpar, grob)# others via 'grid::'
 
 ## Currently, group generics need to be explicitly imported (Bug?):
@@ -36,10 +38,7 @@ export("Cholesky",
 #	 "isTriangular",
 #	 "isDiagonal",
        "isLDL",
-#TODO       "lm.fit.sparse",# <- "somewhat experimental"
        "lu",
-       "mkRespMod",
-       "model.Matrix",
        "nearPD",
        "nnzero",
        "printSpMatrix",
@@ -48,6 +47,8 @@ export("Cholesky",
        "readHB",
        "readMM",
        "sparse.model.matrix",
+## only temporary (2010-07) for back compatibility:
+       "model.Matrix",
        "symmpart",
        "skewpart",
        "tcrossprod",
@@ -157,13 +158,6 @@ exportClasses(
 
 	      "corMatrix", # unused
 
-              ##
-              "modelMatrix",
-              "sparseModelMatrix",
-              "denseModelMatrix",
-              "dsparseModelMatrix",
-              "ddenseModelMatrix",
-
 	      ## --- inheriting "Matrix", but also factorizations:
 	      "BunchKaufman",
 	      "pBunchKaufman",
@@ -199,20 +193,7 @@ exportClasses(
 	      "lsparseVector",
 	      "nsparseVector",
 	      "zsparseVector",
-	      "xsparseVector", # the class union of all 'x' lost sparseVector's
-
-              ## --- linear predictor modules, containing a model matrix
-              "predModule",
-              "dPredModule",# dense &
-              "sPredModule",# sparse  (for now)
-
-              ## --- response modules, containing a response vector, etc.
-              "respModule",          # base class and also linear model
-              "glmRespMod",          # generalized linear models
-              "nlsRespMod",          # nonlinear regression response
-              "nglmRespMod",         # generalized nonlinear
-
-              "glpModel"
+	      "xsparseVector" # the class union of all 'x' lost sparseVector's
 	      )
 
 
@@ -227,6 +208,10 @@ exportMethods(## for both own and "other" generics:
 	      "Math2",
 	      "Ops",
 	      "Summary",
+
+              ## re-export S4 methods, for "stats"-S3-generics:
+              "cov2cor",
+              "update",
 
 	      "!",
 	      "+",# for dgT(Matrix) only
@@ -250,7 +235,6 @@ exportMethods(## for both own and "other" generics:
               "chol2inv",
 	      "colMeans",
 	      "colSums",
-              "cov2cor",
 	      "coerce",
 	      "crossprod",
 	      "determinant",
@@ -299,16 +283,9 @@ exportMethods(## for both own and "other" generics:
 	      "tril",
 	      "triu",
               "unname",
-              "update",
               "which",
 	      "zapsmall"
 	      )
-
-if(getRversion() < "2.10.0")# The version of R -- at *install* time (!)
-    exportPattern("^contr\\..*")
-
-if(getRversion() < "2.10.0")
-    export("xtabs")
 
 if(getRversion() < "2.11.0" || R.version$`svn rev` < 51018)
     export("norm")
