--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,7 @@ export("Cholesky",
        "abIseq", "abIseq1", "rep2abI",
        "band",
        "bandSparse",
-       "bdiag",
+       "bdiag", ".bdiag",
 ## no longer; implicit generics now
        ## "colMeans", "colSums", ## these needed a "..." added
        ## "rowMeans", "rowSums",
@@ -41,6 +41,7 @@ export("Cholesky",
        "lu",
        "nearPD",
        "nnzero",
+       "formatSpMatrix", "formatSparseM", ".formatSparseSimple",
        "printSpMatrix",
        "printSpMatrix2",
        "rankMatrix",
@@ -247,6 +248,7 @@ exportMethods(## for both own and "other" generics:
               "drop",
 	      "expand",
 	      "expm",
+              "format",
 	      "head",
 	      "image",
 	      "forceSymmetric",
