--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-44
-Date: 2010-09-09
+Version: 0.999375-45
+Date: 2010-10-21
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -10,7 +10,7 @@ Description: Classes and methods for dense and sparse matrices and
         operations on them using Lapack and SuiteSparse.
 Depends: R (>= 2.10.0), stats, methods, utils, lattice
 Imports: graphics, grid
-Enhances: MatrixModels, graph, SparseM
+Enhances: MatrixModels, graph, SparseM, sfsmisc
 LazyLoad: yes
 LazyData: no
 LazyDataNote: no longer available, since we use data/*.R *and* our
@@ -22,6 +22,6 @@ LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2010-09-11 20:50:58 UTC; maechler
+Packaged: 2010-11-10 08:08:00 UTC; maechler
 Repository: CRAN
-Date/Publication: 2010-09-13 17:48:09
+Date/Publication: 2010-11-11 12:39:50
