--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-50
-Date: 2011-04-08
+Version: 0.9996875-1
+Date: 2011-08-08
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -10,7 +10,7 @@ Description: Classes and methods for dense and sparse matrices and
         operations on them using Lapack and SuiteSparse.
 Depends: R (>= 2.10.0), stats, methods, utils, lattice
 Imports: graphics, grid
-Enhances: MatrixModels, graph, SparseM, sfsmisc
+Enhances: MatrixModels, graph, SparseM (>= 0.87), sfsmisc
 Encoding: UTF-8
 LazyLoad: yes
 LazyData: no
@@ -22,6 +22,6 @@ LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2011-04-08 15:48:55 UTC; maechler
+Packaged: 2011-08-08 18:41:57 UTC; maechler
 Repository: CRAN
-Date/Publication: 2011-04-09 07:48:02
+Date/Publication: 2011-08-09 11:35:56
