--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.9996875-2
-Date: 2011-08-09
+Version: 0.9996875-3
+Date: 2011-08-12
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -16,12 +16,13 @@ LazyLoad: yes
 LazyData: no
 LazyDataNote: no longer available, since we use data/*.R *and* our
         classes
+BuildResaveData: no
 License: GPL (>= 2)
 LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
         COLAMD, CSparse and SPQR from the SuiteSparse collection of Tim
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2011-08-09 19:47:45 UTC; maechler
+Packaged: 2011-08-13 13:05:17 UTC; maechler
 Repository: CRAN
-Date/Publication: 2011-08-10 05:48:47
+Date/Publication: 2011-08-13 17:45:58
