--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.9996875-3
-Date: 2011-08-12
+Version: 1.0-0
+Date: 2011-09-27
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -8,8 +8,9 @@ Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
 Description: Classes and methods for dense and sparse matrices and
         operations on them using Lapack and SuiteSparse.
-Depends: R (>= 2.10.0), stats, methods, utils, lattice
+Depends: R (>= 2.12.0), stats, methods, utils, lattice
 Imports: graphics, grid
+Suggests: expm
 Enhances: MatrixModels, graph, SparseM (>= 0.87), sfsmisc
 Encoding: UTF-8
 LazyLoad: yes
@@ -23,6 +24,6 @@ LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2011-08-13 13:05:17 UTC; maechler
+Packaged: 2011-10-04 08:04:49 UTC; maechler
 Repository: CRAN
-Date/Publication: 2011-08-13 17:45:58
+Date/Publication: 2011-10-04 15:57:32
