--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,12 +49,15 @@ export("Cholesky",
 #	 "isTriangular",
 #	 "isDiagonal",
        "isLDL",
+       "is.null.DN",
+       "invPerm",
        "lu",
        "nearPD",
        "nnzero",
        "formatSpMatrix", "formatSparseM", ".formatSparseSimple",
        "printSpMatrix",
        "printSpMatrix2",
+       "qrR",
        "rankMatrix",
        "readHB",
        "readMM",
@@ -278,7 +281,7 @@ exportMethods(## for both own and "other" generics:
               "nnzero",
               "print",# print(x, ...) when show(x) is not sufficient
 	      "qr",
-	      "qr.R",
+	      "qr.R", "qr.Q",
 	      "qr.qy",
 	      "qr.qty",
 	      "qr.coef",
