--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.0-11
-Date: 2013-02-02
+Version: 1.0-12
+Date: 2013-03-26
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -25,6 +25,7 @@ LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2013-02-02 19:38:40 UTC; maechler
+Packaged: 2013-03-26 15:38:54 UTC; maechler
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-02-08 18:08:13
+Date/Publication: 2013-03-26 19:26:09
